@@ -151,7 +151,7 @@ strtoull( const char *nptr, char **endptr, int base )
             break;
         if (c >= base)
             break;
-        if (any < 0 || acc > cutoff || acc == cutoff && c > cutlim)
+        if ((any < 0) || (acc > cutoff) || ((acc == cutoff) && (c > cutlim)))
             any = -1;
         else {
             any = 1;
