@@ -1,3 +1,8 @@
+2008-12-23  Andrew Lunn  <andrew.lunn@ascom.ch>
+
+	* src/strtoull.cxx, src/strtoll.cxx, src/strtoul.cxx, src/strtoul.cxx:
+	lisp'ify to avoid compiler warnings.
+
 2005-12-27  Sergei Organov  <osv@javad.com>
 
 	* src/strtod.cxx (Ise): 'd' and 'D' aren't allowed in floating
